# moth-os-esp32

./: .gitignore  AutoVersion.cmake  CMakeLists.txt  README.md  build.sh
components/component_interface/: component_interface.h
components/moth-comm/: CMakeLists.txt  moth-comm.c
components/moth-comm/include/: moth-comm.h
components/moth-monitor/: CMakeLists.txt  moth-monitor.c
components/moth-monitor/include/: moth-monitor.h
components/moth-network/: CMakeLists.txt  moth-network.c
components/moth-network/include/: moth-network.h
components/moth-transport/: CMakeLists.txt
components/moth-transport/http/: moth-transport-http.c  moth-transport-settings.h
components/moth-transport/include/: moth-transport.h
components/moth-transport/test/: CMakeLists.txt  test.c
main/: main.c
scripts/: build.sh  entry.sh
test/: CMakeLists.txt
test/main/: test.c
